@@ -460,6 +460,21 @@
 #
 ##########################################################################################################
 #
+## IPMI_Drive_Slot_Transition_Severity
+#
+# IPMI_Drive_Slot_Transition_Severity_No_Event                                         Nominal
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_OK                                 Nominal
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Critical_From_OK               Warning
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_Critical_From_Less_Severe          Critical
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe   Critical
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Critical_From_More_Severe      Warning
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_Critical_From_Non_Recoverable      Critical
+# IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Recoverable                    Critical
+# IPMI_Drive_Slot_Transition_Severity_Monitor                                          Warning
+# IPMI_Drive_Slot_Transition_Severity_Informational                                    Nominal
+#
+##########################################################################################################
+#
 ## IPMI_POST_Memory_Resize_State
 #
 # IPMI_POST_Memory_Resize_State_No_Event       Nominal
