@@ -453,6 +453,20 @@ static struct ipmi_interpret_sel_config ipmi_interpret_sel_drive_slot_device_pre
   };
 static unsigned int ipmi_interpret_sel_drive_slot_device_present_config_len = 2;
 
+static struct ipmi_interpret_sel_config ipmi_interpret_sel_drive_slot_transition_severity_config[] =
+  {
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_OK", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Critical_From_OK", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_Critical_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Critical_From_More_Severe", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_Critical_From_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Drive_Slot_Transition_Severity_Transition_To_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Drive_Slot_Transition_Severity_Monitor", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Drive_Slot_Transition_Severity_Informational", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+  };
+static unsigned int ipmi_interpret_sel_drive_slot_transition_severity_config_len = 9;
+
 static struct ipmi_interpret_sel_config ipmi_interpret_sel_post_memory_resize_state_config[] =
   {
     { "IPMI_Post_Memory_Resize_State_Deasserted", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
@@ -1852,6 +1866,12 @@ interpret_sel_init (ipmi_interpret_ctx_t ctx)
     goto cleanup;
 
   if (_interpret_config_sel_init (ctx,
+                                  &ctx->interpret_sel.ipmi_interpret_sel_drive_slot_transition_severity_config,
+                                  ipmi_interpret_sel_drive_slot_transition_severity_config,
+                                  ipmi_interpret_sel_drive_slot_transition_severity_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sel_init (ctx,
                                   &ctx->interpret_sel.ipmi_interpret_sel_post_memory_resize_state_config,
                                   ipmi_interpret_sel_post_memory_resize_state_config,
                                   ipmi_interpret_sel_post_memory_resize_state_config_len) < 0)
@@ -2238,6 +2258,9 @@ interpret_sel_destroy (ipmi_interpret_ctx_t ctx)
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_drive_slot_device_present_config);
+
+  _interpret_config_sel_destroy (ctx,
+                                 ctx->interpret_sel.ipmi_interpret_sel_drive_slot_transition_severity_config);
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_post_memory_resize_state_config);
@@ -2883,6 +2906,7 @@ interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
   int ipmi_interpret_sel_drive_slot_state_flags[ipmi_interpret_sel_drive_slot_state_config_len];
   int ipmi_interpret_sel_drive_slot_predictive_failure_flags[ipmi_interpret_sel_drive_slot_predictive_failure_config_len];
   int ipmi_interpret_sel_drive_slot_device_present_flags[ipmi_interpret_sel_drive_slot_device_present_config_len];
+  int ipmi_interpret_sel_drive_slot_transition_severity_flags[ipmi_interpret_sel_drive_slot_transition_severity_config_len];
   int ipmi_interpret_sel_post_memory_resize_state_flags[ipmi_interpret_sel_post_memory_resize_state_config_len];
   int ipmi_interpret_sel_system_firmware_progress_flags[ipmi_interpret_sel_system_firmware_progress_config_len];
   int ipmi_interpret_sel_system_firmware_progress_transition_severity_flags[ipmi_interpret_sel_system_firmware_progress_transition_severity_config_len];
@@ -3142,6 +3166,12 @@ interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
                             ctx->interpret_sel.ipmi_interpret_sel_drive_slot_device_present_config,
                             ipmi_interpret_sel_drive_slot_device_present_flags,
                             ipmi_interpret_sel_drive_slot_device_present_config_len);
+
+  _fill_sel_config_options (config_file_options,
+                            &config_file_options_len,
+                            ctx->interpret_sel.ipmi_interpret_sel_drive_slot_transition_severity_config,
+                            ipmi_interpret_sel_drive_slot_transition_severity_flags,
+                            ipmi_interpret_sel_drive_slot_transition_severity_config_len);
 
   _fill_sel_config_options (config_file_options,
                             &config_file_options_len,
