@@ -162,6 +162,7 @@ struct ipmi_interpret_sel {
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_drive_slot_state_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_drive_slot_predictive_failure_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_drive_slot_device_present_config;
+  struct ipmi_interpret_sel_config **ipmi_interpret_sel_drive_slot_transition_severity_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_post_memory_resize_state_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_system_firmware_progress_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_system_firmware_progress_transition_severity_config;
@@ -257,6 +258,7 @@ struct ipmi_interpret_sensor {
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_drive_slot_state_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_drive_slot_predictive_failure_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_drive_slot_device_present_config;
+  struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_drive_slot_transition_severity_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_post_memory_resize_state_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_system_firmware_progress_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_system_firmware_progress_transition_severity_config;
