@@ -1,3 +1,8 @@
+2019-02-07 Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/interpret: Support interpretation of drive slot +
+	transition severity sensors / events.
+
 2019-01-31 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/api: Fix workaround for out of order packets with
